--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Talk-Tune-S-server",
+  "name": "talk-tune-s-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0"
   },
